steepshot_io/static/css/main.css
/*! HTML5 Boilerplate v5.0.0 | MIT License | http://h5bp.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
    height:100%;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
.wrapper {
    width:90%;
    margin:auto;
    max-width: 1260px;
}

body {
    background: #f6f6fb;
    background-image: url("BG@3x.png");
    background-size: cover;
}

#header {
    clear: both;
    text-decoration: none;
    margin-top: 50px;
    position: relative;
    z-index:15;
}

#header a {
    color:#374657;
    font-size: 0.8em;
}

.messages {
    background-color: #7ED321;
    list-style-type: none;
    margin: 0px;
    padding: 10px;
    color: white;
    border-radius: 8px;
}

.home-icon{
    background-image: url("steepshot_logo@2x.png");
    display: inline-block;
    padding: 15px 80px;
    background-size: 120px;
    background-repeat: no-repeat;
}

.tgmenu {
    display: none;
}

#header ul {
    list-style-type: none;
    display: inline;
    margin:0;
    font-weight: bold;
    float: right;
}

#menu li {
    display: inline-block;
    margin:0 0 0 60px;
}

#menu li > a {
    font-size: 14px;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 600 !important;
}

a {
    text-decoration: none;
}

#modal_form {
	width: 200px;
	height: 70px;
	border-radius: 5px;
	background: #f6f6fb;
	position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
	display: none;
	z-index: 19;
	padding: 15px 10px;
}

#modal_form_text {
    text-align: center;
    text-decoration: none;
    margin: 15px;
}

#modal_form #modal_close {
	width: 21px;
	height: 21px;
	position: absolute;
	top: 10px;
	right: 10px;
	cursor: pointer;
	display: block;
}

#overlay {
	z-index:16;
	position:fixed;
	background-color:#000;
	opacity:0.8; /
	-moz-opacity:0.8;
	filter:alpha(opacity=80);
	width:100%;
	height:100%;
	top:0;
	left:0;
	cursor:pointer;
	display:none;
}

.textbox1 {
    opacity: 1;
    transition: 0.45s;
    position: fixed;
}

#buttons {
    border:solid #f0f1f5 1px;
    border-radius: 10px;
    height: 180px;
    text-align: left;
    font-size:0.8em;
    z-index: 13;
    background: rgba(248, 248, 253, 0.5);
    transition: 0.45s;
    opacity: 1;
    display: inline-block;
    position: fixed;
    top: 440px;
}

#buttons p {
    font-size: 13px;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 600 !important;
    margin: 10px 15px 25px;
    color:#374657;
}

#buttons a + p {
    margin: 25px 15px 20px;
}

#buttons a {
    text-align: center;
    text-decoration: none;
    margin: 15px;
    font-size: 13px;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 600 !important;
}

.btpg2 {
    margin-left:45% !important;
    top:520px !important;
}

#mimg img, #mimg2 img, #mimg3 img {
    height:600px;
    position: fixed;
    -webkit-animation-duration: 6s; /* Safari 4.0 - 8.0 */
    -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
    animation-duration: 6s;
    animation-iteration-count: infinite;
    transition: 0.5s;
    opacity: 0;
    z-index: 1;
}

.hd #mimg img {   
    transition-property: right, opacity;
    transition-duration: 0.4s, 0.1s;
    transition-delay: 0s, 0.35s; 
}

#mimga img {
    right:-2250px ;
    bottom: -150px;
    height:600px;
    position: fixed;
    transition-property: right, opacity;
    transition-duration: 0.35s, 0.1s;
    transition-delay: 0s, 0.35s;
    z-index: 1;
    opacity: 1;
}

#mimg img {
    right:-2250px;
    bottom: -150px;
    transition-delay: 0.3s;
    transition-duration: 0.05s !important;
}

#error{
    display: none;
    color: red;
}

#mimg2 img {
    right:-2000px;
    bottom: -480px;
}

#mimg3 img {
    right:-2920px;
    bottom:60px;
}
.mimga img {
    bottom: -150px;
    right: -345px !important;
    opacity: 0!important;
}

.mimg img{
    bottom: -150px;
    -webkit-animation-name: amimg;
    animation-name: amimg;
    opacity: 1 !important;
}

@-webkit-keyframes amimg {
    0%   { right:-350px;}

    50%  { right:-300px;}

    100% { right:-350px;}
}
/* ... */

